Les données échangées entre composants sont placées dans un module à part, et compilées en librairies.
Les makefiles sont revus pour réaliser correctement le "clean".