@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Site-Central" default="jar">
 
-   <property name="jfx13" value="/usr/lib/jvm/openjfx-sdk-13/lib" />
-   <property name="jutil" value=".." />
-   <property name="jar"   value="../${ant.project.name}.jar" />
+   <property name="jfx-path" location="/usr/lib/jvm/openjfx-sdk-13/lib" /> 
+   <property name="jutil"    location="../util.jar" />
+   <property name="dabtypes" location="../dabtypes.jar" />
+   <property name="jar"      location="../${ant.project.name}.jar" />
+
+   <path id="jfx">
+      <fileset dir="${jfx-path}" includes="*.jar" />
+   </path>
 
    <target name="clean">
       <delete dir="build" />
       <delete dir="bin" />
       <delete dir="src-gen" />
       <delete file="${jar}" />
+      <delete file="compile.log" />
    </target>
 
    <target name="generate-all-sources">
@@ -17,13 +23,17 @@
    </target>
 
    <target name="javac" depends="generate-all-sources">
-      <ant dir="../util-java" target="jar" inheritall="false" />
+      <ant dir="../util-java"     target="jar" inheritall="false" />
+      <ant dir="../dabtypes-java" target="jar" inheritall="false" />
       <mkdir dir="build" />
       <javac
          destdir          ="build"
-         modulepath       ="${jfx13}:${jutil}"
          includeantruntime="false">
+         <classpath location="${jutil}" />
+         <classpath location="${dabtypes}" />
+         <classpath refid="jfx" />
          <src path="src" />
+         <src path="src-boot" />
          <src path="src-gen" />
       </javac>
    </target>
@@ -43,8 +53,10 @@
          <arg value="-geometry" /><arg value="90x30-640+0" />
          <arg value="-hold" />
          <arg value="-e" /><arg value="java" />
-         <arg value="--module-path" /><arg value="${jfx13}:${jutil}:${jar}" />
-         <arg value="--module" /><arg value="sc/sc.ui.Main" />
+         <arg value="--module-path=${jfx-path}" />
+         <arg value="--add-modules=javafx.controls,javafx.fxml,javafx.graphics" />
+         <arg value="-cp" /><arg value="${jutil}:${jar}" />
+         <arg value="sc.ui.Main" />
          <arg value="--name=sc" />
       </exec>
    </target>
